# netsuite-rag-mcp

./: .gitignore  README.md  pyproject.toml
docs/plan/: research_findings_architecture.yaml
docs/plan/20260514-dual-source-rag-design-export/: plan.yaml  research_findings_Obsidian workspace optimization.yaml  (+3 more)
rag/: sources.yaml
src/netsuite_rag_mcp/: chunker.py  chunker_xml_json.py  cli.py  config.py  git_utils.py  indexer.py  manifest.py  metadata.py  models.py  note_writer.py  parser.py  parser_xml_json.py  platform_paths.py  policy.py  preload.py  redaction.py  retriever.py  runtime_config.py  server.py  vector_store.py
templates/: clientscript-note.md  customlist-note.md  customrecord-note.md  decision-note.md  knowledge-note.md  mapreduce-note.md  object-note.md  requirement-note.md  restlet-note.md  script-note.md  troubleshooting-note.md
templates/objects/: deployment-note.md  role-note.md  savedsearch-note.md  workflow-note.md
templates/scripts/: default-script-note.md  suitelet-note.md  userevent-note.md
tests/: conftest.py  test_citation_format.py  test_cli.py  test_config.py  test_conflict_detection.py  test_diagnostics.py  test_git_utils.py  test_hash_incremental.py  test_indexer_multi_source.py  test_indexer_retriever.py  test_manifest.py  test_metadata_redaction_policy.py  test_models_extended.py  test_parser_chunker.py  test_preload.py  test_readme_global_mcp_docs.py  test_retriever_source_filter.py  test_routing.py  test_runtime_config.py  test_runtime_storage_integration.py  test_save_obsidian_note.py  test_server_tools.py  test_templates.py
(+10 files in other folders)
